Kubernetes/analytics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
  - port: 80
    targetPort: 5002
  type: ClusterIP
