Kubernetes/data-entry-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-entry-service
spec:
  selector:
    app: data-entry-service
  ports:
  - port: 80
    targetPort: 5001
  type: ClusterIP
