Kubernetes/results-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-service
spec:
  selector:
    app: results-service
  ports:
  - port: 80
    targetPort: 5003
  type: ClusterIP
