Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /data/?(.*)
        pathType: Prefix
        backend:
          service:
            name: data-entry-service
            port:
              number: 80
      - path: /results/?(.*)
        pathType: Prefix
        backend:
          service:
            name: results-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: data-entry-service
            port:
              number: 80
